# tabulate-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs
scripts/: generate_snapshots.py
src/: alignment.rs  constants.rs  format.rs  lib.rs  options.rs  table.rs  width.rs
tests/: basic.rs  snapshots.rs
tests/fixtures/: python_snapshots.json
